--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Flores y corazones</title>
+  <title>Flowers For You Love</title>
   <link rel="stylesheet" href="./main.css">
 
 </head>
